Fix mobile footer alignment and Ashwamedh image path

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8825,7 +8825,7 @@ section,
 
   .footer .footer-credit-line {
     width: 100%;
-    text-align: left;
+    text-align: center;
     margin-left: 0;
   }
 }
